# rust_zero2pro

./: .env  Cargo.toml
docs/: git.md  vagrant.md
migrations/: 20240713155313_create_subscriptions_table.sql  20240730192702_create_subscriptions_table.sql  20240730193146_create_subscriptions_table.sql
scripts/: init_db.sh  vagrant_sqlx_create_subscriptios_table.sh  vagrant_sqlx_init_db.sh  vagrant_sqlx_migrate_db.sh
src/: configuration.rs  configuration.yaml  lib.rs  main.rs  startup.rs
src/routes/: greeting.rs  health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
